@@ -207,6 +207,9 @@ Other Changes
 * SOLR-7421: RecoveryAfterSoftCommitTest fails frequently on Jenkins due to full index
   replication taking longer than 30 seconds. (Timothy Potter, shalin)
 
+* SOLR-7081: Add new test case to test if create/delete/re-create collections work.
+  (Christine Poerschke via Ramkumar Aiyengar)
+
 ==================  5.1.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
